z-index fix

--- a/src/app/components/mainstage/mountains/mountains.component.scss
+++ b/src/app/components/mainstage/mountains/mountains.component.scss
@@ -1,5 +1,6 @@
 :host {
   --mountain-height: 21.76rem;
+  z-index: 1;
 }
 
 picture::before {
